--- a/index.scss
+++ b/index.scss
@@ -3,9 +3,10 @@ $blue: #1820EF;
 $red: #FF4E42;
 $yellow: #FFC024;
 $white: #FAFAED;
+$grey: #C5C5C5;
 
-$active-color: $blue;
-$inactive-color: $white;
+$color-active: $blue;
+$color-inactive: $white;
 
 $font-family-primary: "M PLUS Rounded 1c", sans-serif;
 
@@ -18,6 +19,10 @@ $weight-black: 900;
 
 body {
   font-family: $font-family-primary;
+}
+
+.wrapper {
+  background-color: $color-inactive;
 }
 
 .header {
@@ -53,20 +58,17 @@ body {
     color: $font-color-secondary;
 
     &--big{
-      font-family: $font-family-primary;
+      margin: 0 0 24px;
       font-size: 120px;
       line-height: 100px;
       font-weight: $weight-black;
-      text-align: center;
-      color: $font-color-secondary;
-      margin-bottom: 24px;
     }
   }
 }
 
 .selection {
   padding: 40px 0 22px;
-  background-color: $inactive-color;
+  background-color: $color-inactive;
 
   &__title {
     font-family: $font-family-primary;
@@ -138,7 +140,7 @@ body {
     line-height: 24px;
     font-weight: $weight-black;
     text-align: center;
-    color: $active-color;
+    color: $color-active;
     margin-bottom: 8px;
   }
   
@@ -160,5 +162,37 @@ body {
     font-weight: $weight-black;
     text-align: center;
     color: $red;
+  }
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  background-color: $color-inactive;
+
+  &--order{
+    padding: 26px 0 38px;
+  }
+}
+
+.button {
+  padding: 20px 52px 20px 16px;
+  background-color: $grey;
+  background-image: url(./images/button/arrow.png);
+  background-repeat: no-repeat;
+  background-position: center right 16px;
+  border: none;
+  border-radius: 50px;
+  font-family: $font-family-primary;
+  font-size: 14px;
+  line-height: 20.79px;
+  letter-spacing: 1.78px;
+  text-transform: uppercase;
+  font-weight: $weight-black;
+  text-align: center;
+  color: $font-color-secondary;
+
+  &--new-order {
+
   }
 }
