--- a/index.scss
+++ b/index.scss
@@ -17,12 +17,14 @@ $weight-medium: 500;
 $weight-extra-bold: 800;
 $weight-black: 900;
 
-body {
-  font-family: $font-family-primary;
-}
-
 .wrapper {
+  font-family: $font-family-primary;
   background-color: $color-inactive;
+  display: none;
+
+  &--active {
+    display: block;
+  }
 }
 
 .header {
@@ -162,6 +164,44 @@ body {
     font-weight: $weight-black;
     text-align: center;
     color: $red;
+  }
+}
+
+.card--active {
+  background-color: $color-active;
+
+  & .card__image {
+    &--salt {
+      background-image: url(./images/icons/salt/active.svg);
+    } 
+    &--shoyu {
+      background-image: url(./images/icons/shoyu/active.svg);
+    }
+    &--miso {
+      background-image: url(./images/icons/miso/active.svg);
+    }
+
+    &--chasu {
+      background-image: url(./images/icons/chasu/active.svg);
+    }
+    &--yasai_vegetarian {
+      background-image: url(./images/icons/yasai_vegetarian/active.svg);
+    }
+    &--karaague{
+      background-image: url(./images/icons/karaague/active.svg);
+    }
+  }
+  
+  & .card__type {
+    color: $font-color-secondary;
+  }
+  
+  & .card__description {
+    color: $font-color-secondary;
+  }
+  
+  & .card__price {
+    color: $yellow;
   }
 }
 
