--- a/index.scss
+++ b/index.scss
@@ -32,7 +32,8 @@ $weight-black: 900;
   flex-wrap: wrap;
   justify-content: center;
   padding: 24px 0 66px;
-  background: url('./images/header/background-pattern.png') repeat;
+  background-image: url('./images/header/background-pattern.png');
+  background-repeat: repeat;
 
   &__logo {
     margin-bottom: 24px;
@@ -213,6 +214,10 @@ $weight-black: 900;
   &--order{
     padding: 26px 0 38px;
   }
+
+  &--done{
+    padding-bottom: 72px;
+  }
 }
 
 .button {
@@ -233,7 +238,10 @@ $weight-black: 900;
   color: $font-color-secondary;
 
   &--new-order {
-
+    background-color: $color-active;
+    background-image: url(./images/button/arrow-yellow.png);
+    background-repeat: no-repeat;
+    background-position: center right 16px;
   }
 
   &--loading {
@@ -271,5 +279,88 @@ $weight-black: 900;
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+
+.result {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 21px 0 100px;
+  background-image: url('./images/done/pattern-azul.png');
+  background-repeat: repeat;
+
+  &__image {
+    width: 100%;
+    height: 435px;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+
+  &__title {
+    width: 100%;
+    font-family: $font-family-primary;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: $weight-black;
+    text-align: center;
+    color: $font-color-secondary;
+    margin-bottom: 16px;
+  }
+  &__text {
+    width: 100%;
+    font-family: $font-family-primary;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: $weight-black;
+    text-align: center;
+    color: $yellow;
+    margin-bottom: 16px;
+  }
+}
+
+.done {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 71px 0 24px;
+  background-color: $color-inactive;
+
+  &__image {
+    margin-bottom: 19px;
+  }
+
+  &__title {
+    width: 100%;
+    font-family: $font-family-primary;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: $weight-black;
+    text-align: center;
+    color: $yellow;
+    margin: 0 17px 15px;
+  }
+
+  &__subtitle {
+    width: 100%;
+    font-family: $font-family-primary;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: $weight-black;
+    text-align: center;
+    color: $red;
+    margin: 0 17px 24px;
+  }
+
+  &__text {
+    width: 100%;
+    font-family: $font-family-primary;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: $weight-medium;
+    text-align: center;
+    color: $font-color-primary;
+    margin: 0 17px 24px;
   }
 }
