--- a/index.scss
+++ b/index.scss
@@ -364,3 +364,44 @@ $weight-black: 900;
     margin: 0 17px 24px;
   }
 }
+
+.error {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  width: 90%;
+  margin-left: 5%;
+  padding: 40px 0;
+  background-color: $white;
+  border-radius: 11px;
+  box-shadow: 0px 4px 12px rgba(224, 219, 191, 0.6);
+
+  &--active {
+    display: block;
+    animation: error__animation 4s;
+  }
+
+  &__text {
+    font-family: $font-family-primary;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: $weight-black;
+    text-align: center;
+    color: $red;
+  }
+}
+
+@keyframes error__animation {
+  1% {
+    opacity: 1;
+    display: block;
+    
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
