--- a/index.scss
+++ b/index.scss
@@ -26,8 +26,19 @@ $weight-black: 900;
   background-color: $color-inactive;
   display: none;
 
+  @media (min-width: $breakpoint-desktop) {
+    min-height:100vh;
+  }
+
+
   &--active {
     display: block;
+
+    &.wrapper--done {
+      @media (min-width: $breakpoint-desktop) {
+        display: flex;
+      }
+    }
   }
 }
 
@@ -138,6 +149,10 @@ $weight-black: 900;
   padding: 40px 0 22px;
   background-color: $color-inactive;
 
+  @media (min-width: $breakpoint-desktop) {
+    padding: 96px 0 0;
+  }
+
   &__title {
     width: 100%;
     font-family: $font-family-primary;
@@ -147,6 +162,11 @@ $weight-black: 900;
     text-align: center;
     color: $font-color-primary;
     margin: 0 16px 16px;
+
+    @media (min-width: $breakpoint-desktop) {
+      font-size: 32px;
+      line-height: 47.52px;
+    }
   }
 
   &__subtitle {
@@ -158,12 +178,22 @@ $weight-black: 900;
     text-align: center;
     color: $font-color-primary;
     margin: 0 16px 16px 32px;
+
+    @media (min-width: $breakpoint-desktop) {
+      margin: 0 0 47px;
+    }
   }
 }
 .options {
   display: flex;
   overflow-x: auto;
   padding: 4px 0;
+
+  @media (min-width: $breakpoint-desktop) {
+    flex: auto;
+    place-content: space-evenly;
+    max-width: 1215px;
+  }
 }
 .card {
   flex-shrink: 0;
@@ -174,8 +204,16 @@ $weight-black: 900;
   box-shadow: 0px 4px 12px rgba(224, 219, 191, 0.6);
   cursor: pointer;
 
+  @media (min-width: $breakpoint-desktop) {
+    margin-left: 0;
+  }
+
   &:last-child {
     margin-right: 16px;
+
+    @media (min-width: $breakpoint-desktop) {
+      margin-right: 0;
+    }
   }
 
   &__image {
@@ -281,10 +319,14 @@ $weight-black: 900;
 
   &--order{
     padding: 26px 0 38px;
+
+    @media (min-width: $breakpoint-desktop) {
+      padding: 80px 0 126px;
+    }
   }
 
   &--done{
-    padding-bottom: 72px;
+    padding-bottom: 0;
   }
 }
 
@@ -301,6 +343,7 @@ $weight-black: 900;
   line-height: 20.79px;
   letter-spacing: 1.78px;
   text-transform: uppercase;
+  text-decoration: none;
   font-weight: $weight-black;
   text-align: center;
   color: $font-color-secondary;
@@ -311,6 +354,10 @@ $weight-black: 900;
     background-image: url(./images/button/arrow-yellow.png);
     background-repeat: no-repeat;
     background-position: center right 16px;
+
+    @media (min-width: $breakpoint-desktop) {
+      height: 60px;
+    }
   }
 
   &--header {
@@ -371,6 +418,23 @@ $weight-black: 900;
   background-image: url('./images/done/pattern-azul.png');
   background-repeat: repeat;
 
+  @media (min-width: $breakpoint-desktop) { 
+    box-sizing: border-box;
+    position: relative;
+    width: 50%;
+   }
+
+   &__logo {
+    @media (min-width: $breakpoint-desktop) {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: auto;
+      padding: 41px 0 0 40px;
+      text-align: left;
+     }
+   }
+
   &__image {
     width: 100%;
     height: 435px;
@@ -387,6 +451,10 @@ $weight-black: 900;
     text-align: center;
     color: $font-color-secondary;
     margin-bottom: 16px;
+
+    @media (min-width: $breakpoint-desktop) {
+      margin-bottom: 0;
+    }
   }
   &__text {
     width: 100%;
@@ -397,6 +465,11 @@ $weight-black: 900;
     text-align: center;
     color: $yellow;
     margin-bottom: 16px;
+
+    @media (min-width: $breakpoint-desktop) {
+      font-size: 32px;
+      line-height: 47.52px;
+    }
   }
 }
 
@@ -404,8 +477,14 @@ $weight-black: 900;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 71px 0 24px;
+  padding: 71px 0 72px;
   background-color: $color-inactive;
+
+  @media (min-width: $breakpoint-desktop) {
+    box-sizing: border-box;
+    width: 50%;
+    margin: auto 0;
+   }
 
   &__image {
     margin-bottom: 19px;
@@ -431,6 +510,11 @@ $weight-black: 900;
     text-align: center;
     color: $red;
     margin: 0 17px 24px;
+
+    @media (min-width: $breakpoint-desktop) {
+      font-size: 32px;
+      line-height: 40px;
+    }
   }
 
   &__text {
@@ -442,6 +526,10 @@ $weight-black: 900;
     text-align: center;
     color: $font-color-primary;
     margin: 0 17px 24px;
+
+    @media (min-width: $breakpoint-desktop) {
+      margin-bottom: 32px;
+    }
   }
 }
 
